--- a/BDTools/bin/AndroidManifest.xml
+++ b/BDTools/bin/AndroidManifest.xml
@@ -7,21 +7,28 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="23" />
+    
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
+        android:name="com.zhh.application.MyApplication"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <!-- <activity
-            android:name="com.zhh.bdtool.MainActivity"
+        <activity
+            android:name="com.zhh.activity.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> -->
+        </activity>
+        
+        <activity android:name="com.zhh.activity.StudentInfoActivity"/>
+        
     </application>
 
 </manifest>
